# defi-transparency-microscope

./: .gitignore  LICENSE
backend/: .env.example  .eslintrc.cjs  .gitignore  README.md  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
backend/scripts/: coverage-check.ts  e2e-server.ts
backend/src/: config.ts  errors.ts  logger.ts  server.ts
backend/src/chain/: abis.ts  addresses.ts  ammSyncWatcher.ts  cachedProvider.ts  chainName.ts  classify.ts  fallback.ts  lending.ts  liquidationWatcher.ts  lp.ts  mempool.ts  pools.ts  provider.ts  transactions.ts  types.ts  wsProvider.ts
backend/src/dtm_backend/: __init__.py  config.py  errors.py  logger.py  main.py  server.py
backend/src/dtm_backend/chain/: __init__.py  abis.py  addresses.py  classify.py  lending.py  lp.py  pools.py  provider.py  transactions.py  types.py
backend/src/dtm_backend/experiments/: __init__.py  attribution.py  cpmm.py  il.py  presets.py  sandwich.py  types.py
backend/src/dtm_backend/routes/: __init__.py  experiments.py  health.py  lending.py  lp.py  pools.py  transactions.py  ws.py
backend/src/experiments/: attribution.ts  cpmm.ts  il.ts  presets.ts  sandwich.ts  types.ts
backend/src/routes/: experiments.ts  health.ts  pools.ts  positions.ts  transactions.ts
backend/src/ws/: batcher.ts  hub.ts  routes.ts  topics.ts
backend/tests/: buildCorsOptions.test.ts  build_cors_options_test.py  config.test.ts  config_test.py  conftest.py  coverage_check_test.py  dev_script_test.py  errors_test.py  logger_test.py  setup.ts
backend/tests/chain/: abis.test.ts  abis_test.py  addresses.test.ts  addresses_test.py  ammSyncWatcher.test.ts  cachedProvider.test.ts  chainName.test.ts  classify.test.ts  classify_test.py  fallback.test.ts  lending.test.ts  lending_test.py  liquidationWatcher.test.ts  lp.test.ts  lp_test.py  mempool.test.ts  pools.test.ts  pools_test.py  provider.test.ts  provider_test.py  transactions.test.ts  transactions_test.py  types_test.py  wsProvider.test.ts
backend/tests/experiments/: attribution.test.ts  attribution_test.py  cpmm_test.py  il.test.ts  il_test.py  presets.test.ts  presets_test.py  sandwich.test.ts  sandwich_test.py  types_wire_test.py
backend/tests/helpers/: buildTestApp.ts  stubProvider.ts
backend/tests/integration/: smoke.test.ts  smoke_test.py  ws.test.ts  ws_test.py
backend/tests/routes/: experiments.test.ts  experiments_route_test.py  health.test.ts  health_route_test.py  pools.test.ts  pools_route_test.py  positions.test.ts  transactions.test.ts  ws_route_test.py
backend/tests/watchers/: amm_sync_test.py  liquidation_test.py  mempool_test.py
backend/tests/ws/: batcher.test.ts  hub.test.ts  hub_test.py  routes.test.ts  topics.test.ts  topics_test.py
(+355 files in other folders)
