[project]
name = "dtm-backend"
version = "0.1.0"
description = "DeFi Transparency Microscope — Python backend (FastAPI + web3.py)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
    { name = "pengwow" },
]
keywords = ["defi", "ethereum", "mev", "transparency"]

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "web3>=7.10.0,<8.0.0",
    "eth-abi>=5.0.0,<6.0.0",
    "eth-utils>=5.0.0,<6.0.0",
    "cachetools>=5.5.0,<6.0.0",
    "structlog>=24.4.0,<25.0.0",
    "httpx>=0.27.0,<0.28.0",
    "websockets>=13.0.0,<14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "coverage>=7.6.0,<8.0.0",
    "ruff>=0.6.0,<0.8.0",
    "mypy>=1.11.0,<2.0.0",
    "types-cachetools>=5.5.0,<6.0.0",
]

[project.scripts]
dtm-backend = "dtm_backend.main:main"
dtm-e2e-server = "dtm_backend.scripts.e2e_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtm_backend"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# Default pytest discovery patterns — we use the `*_test.py`
# convention (TS would call it `*.test.ts`; Python module rules
# forbid dots in the stem, so we use an underscore separator).
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/dtm_backend"]
branch = true
omit = [
    "src/dtm_backend/scripts/*",
    "src/dtm_backend/main.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]
ignore = [
    "E501",  # line-too-long (covered by formatter)
    "B008",  # function-call-in-default-arg (FastAPI pattern)
    "RUF012", # mutable-class-attributes-default (Pydantic pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "E402"]
"scripts/**/*.py" = ["T201"]  # allow print() in scripts

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
files = ["src/dtm_backend"]
